app/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway

metadata:
  name: seedhe-k8s-gateway

spec:
  gatewayClassName: eg #envoy gateway

  listeners:
    - name: http
      protocol: HTTP
      port: 80
