app/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: seedhe-k8s-app

spec:
  parentRefs:
    - name: seedhe-k8s-gateway

  rules:
    - backendRefs:
        - name: seedhe-k8s-app
          port: 8080
