app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: seedhe-k8s-app

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seedhe-k8s-app
                port:
                  number: 8080
